# Student_Management_Records

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
